--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&family=Secular+One&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Shippori+Antique+B1&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Spinnaker&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;600&display=swap");
 
 /* @font-face {
   font-family: "Big John";
@@ -9,18 +6,25 @@
 } */
 
 :root {
-  --main-bg-color: #1b1a1f;
-  --accent-color-primary: #5c97d1;
-  --accent-color-secondary: #7a548a;
-  --accent-color-shadow: #140246;
-  --color-yellow: #fea602;
-  --color-red: #ff0200;
-  --color-purple: #a094bf;
-  --color-pink: #ff007c;
-  --color-orange: #f75146;
-  --font-headings: "Courier", sans-serif;
-  --font-body: "Courier", sans-serif;
+  --main-bg-color: var(--color-brown);
+  --accent-color-primary: var(--color-peach);
+  --accent-color-secondary: var(--color-pink);
+  --accent-color-shadow: var(--color-peach2);
+  --font-headings: "Space Grotesk", sans-serif;
+  --font-body: "Space Grotesk", sans-serif;
   --padding: 2rem;
+  --color-brown: #701d1c;
+  --color-brown1: #dc8c74;
+  --color-brown2: #a44141;
+  --color-peach: #f88567;
+  --color-peach1: #ee6262;
+  --color-peach2: #d55858;
+  --color-yellow: #ffa32c;
+  --color-pink: #f394c6;
+  --color-pink2: #e19bbd;
+  --color-offwhite: #fff6ba;
+  --color-grey: #87857d;
+  --icon-size: 3rem;
 }
 
 body {
@@ -35,9 +39,7 @@ body {
   padding-top: 0;
   /* font-family: "IBM Plex Mono", monospace; */
   font-family: var(--font-body);
-
-  color: #fff;
-  /* color: #000; */
+  color: var(--color-offwhite);
 
   text-align: left;
 }
@@ -155,7 +157,15 @@ header {
 
 /* FOOTER  */
 footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  position: fixed;
+  bottom: 0;
+  padding: var(--padding);
+  width: 100%;
   background-color: var(--main-bg-color);
+  margin-left: -2rem;
 }
 .footer-outer {
   display: flex;
@@ -201,6 +211,11 @@ footer {
 .socialicon {
   width: 2rem;
   /* margin-inline-end: 0.5rem; */
+}
+
+.icon-container > img,
+.icon-container > button > img {
+  max-width: var(--icon-size);
 }
 
 /* HAMBURGER MENU */
