--- a/inner/styles/twine.css
+++ b/inner/styles/twine.css
@@ -6,6 +6,7 @@
 #story {
   margin: 0;
   height: 100%;
+  width: 100%;
 }
 
 #passages {
@@ -348,4 +349,47 @@ span.todo {
 .answerBtn.correct > button {
   background-color: var(--color-yellow);
   color: black;
+}
+
+/* WORDSEARCH  */
+.main-container.wordsearch {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+}
+
+/* Style for the word search container */
+.wordsearch-container {
+  padding: 10px;
+  width: fit-content;
+}
+
+/* Style for the word search table */
+.wordsearch-table {
+  border-collapse: collapse;
+}
+
+/* Style for individual cells in the word search grid */
+.wordsearch-cell {
+  border: 2px solid #333;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  font-size: 2rem;
+  color: black;
+}
+
+/* Style for the cells containing the words to be found */
+.word-cell {
+  background-color: var(--color-offwhite);
+  font-weight: bold;
+}
+
+/* Style for the cells containing the letters of the word search */
+.passage td.letter-cell,
+.letter-cell {
+  background-color: var(--color-offwhite);
+  font-weight: bold;
+  padding: 0.5rem 1.5rem;
 }
