--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Single+Day&display=swap");
 
 /* @font-face {
   font-family: "Big John";
