--- a/styles/main.css
+++ b/styles/main.css
@@ -46,6 +46,7 @@ body {
 }
 
 main {
+  display: none;
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -65,6 +66,7 @@ main.landing {
     ". tower";
   grid-template-columns: 3fr 1fr;
   grid-template-rows: 7fr 0.5fr;
+  display: none;
 }
 
 main.landing > .lockup {
