--- a/styles/main.css
+++ b/styles/main.css
@@ -46,7 +46,7 @@ body {
 }
 
 main {
-  display: none;
+  display: none !important;
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -66,7 +66,7 @@ main.landing {
     ". tower";
   grid-template-columns: 3fr 1fr;
   grid-template-rows: 7fr 0.5fr;
-  display: none;
+  /* display: none; */
 }
 
 main.landing > .lockup {
