--- a/styles/main.css
+++ b/styles/main.css
@@ -31,7 +31,7 @@ body {
   justify-content: space-between;
   align-items: center;
   grid-gap: 2rem;
-  font-size: 10px;
+  font-size: 12px;
   background-color: var(--main-bg-color);
 
   padding-top: 0;
@@ -48,6 +48,7 @@ main {
   align-items: center;
   width: 100%;
   max-width: 1080px;
+  margin: auto;
 }
 .main-container.text {
   width: 60%;
