--- a/styles/main.css
+++ b/styles/main.css
@@ -65,7 +65,7 @@ main.landing {
   background-size: contain;
   background-repeat: no-repeat;
   height: 100vh;
-  /* max-width: 100%; */
+  max-width: 100%;
 }
 
 main.landing > .lockup {
