update placard url

--- a/inner/styles/twine.css
+++ b/inner/styles/twine.css
@@ -574,7 +574,7 @@ main.placard-main {
 }
 
 .people-container {
-  background-image: url("/assets/img/Placardbackground-26low.jpg");
+  background-image: url("/assets/img/placardnoback-25.png");
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
