--- a/styles/main.css
+++ b/styles/main.css
@@ -2,7 +2,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap");
 
 :root {
-  --main-bg-color: var(--color-peach2);
+  --main-bg-color: var(--color-brown);
+  --twine-bg-color: var(--color-brown);
   --accent-color-primary: var(--color-peach);
   --accent-color-secondary: var(--color-pink);
   --accent-color-shadow: var(--color-peach2);
@@ -10,7 +11,7 @@
   --font-body: "Space Grotesk", sans-serif;
   --font-placard: "Hammersmith One", sans-serif;
   --padding: 2rem;
-  --padding-mob: 1.5rem;
+  --padding-mob: 3rem;
   --color-brown: #701d1c;
   --color-brown1: #dc8c74;
   --color-brown2: #a44141;
@@ -32,14 +33,19 @@ body {
   align-items: center;
   grid-gap: 2rem;
   font-size: 10px;
+  font-size: 1.6rem;
   background-color: var(--main-bg-color);
-
+  overflow: scroll;
   padding-top: 0;
   /* font-family: "IBM Plex Mono", monospace; */
   font-family: var(--font-body);
   color: var(--color-offwhite);
 
   text-align: left;
+}
+
+body.peach {
+  background-color: var(--color-peach2);
 }
 
 main {
@@ -49,6 +55,9 @@ main {
   width: 100%;
   max-width: 1080px;
   margin: auto;
+  padding: var(--padding);
+  min-height: 80vh;
+  margin-block-end: 8rem;
 }
 .main-container.text {
   width: 60%;
@@ -66,6 +75,7 @@ main.landing {
   background-repeat: no-repeat;
   height: 100vh;
   max-width: 100%;
+  gap: 4rem;
 }
 
 main.landing > .lockup {
@@ -94,6 +104,10 @@ main.landing > .landing-btn {
   grid-area: btn;
 }
 
+main.landing > .landing-btn > button {
+  font-size: 4rem;
+}
+
 section {
   margin-block-end: 2rem;
   width: 100%;
@@ -108,6 +122,7 @@ h6 {
   color: var(--accent-color-primary);
   text-align: left;
   /* text-transform: uppercase; */
+  margin-block-end: 0;
 }
 
 h1 {
@@ -116,21 +131,31 @@ h1 {
 }
 
 h2 {
-  font-size: 3rem;
+  font-size: 4rem;
 }
 
 h3 {
-  font-size: 2.5rem;
+  font-size: 3.5rem;
+  color: var(--color-pink);
+}
+
+h4 {
+  font-size: 3rem;
   color: var(--color-pink);
 }
 
 p {
-  font-size: 1.7rem;
+  font-size: 2rem;
 }
 
 section.webtext > p {
   line-height: 2.4rem;
-  font-weight: 700;
+  font-weight: 900;
+}
+
+p.provocation {
+  color: var(--color-pink);
+  font-weight: 900;
 }
 
 strong {
@@ -141,6 +166,10 @@ strong {
 a.highlighted {
   text-decoration: underline;
   text-underline-offset: 2px;
+}
+
+a.serious {
+  margin-inline-start: 2rem;
 }
 
 a:active,
@@ -154,17 +183,12 @@ a:hover {
   display: none;
 }
 
-@media screen and (min-width: 550px) {
-  section {
-    margin-block-end: 2rem;
-  }
-
-  section:last-child {
-    margin-bottom: 0;
-  }
-}
-
 @media screen and (max-width: 450px) {
+  main {
+    padding: var(--padding-mob);
+    margin-block-end: 10rem;
+  }
+
   .main-container.text {
     width: 100%;
   }
@@ -210,17 +234,30 @@ a:hover {
 header {
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   position: sticky;
   top: 0;
-  padding: 1.5rem 0;
+  padding: var(--padding);
   /* background-color: #1c8f93; */
   background-color: transparent;
 }
 
+header.general {
+  justify-content: space-between;
+  align-items: flex-start;
+  min-height: 7rem;
+  justify-content: end;
+}
+
 header > .logo-container > img {
   max-width: 15rem;
+}
+
+@media screen and (max-width: 450px) {
+  header {
+    padding: var(--padding-mob);
+  }
 }
 
 /* FOOTER  */
@@ -232,7 +269,11 @@ footer {
   bottom: 0;
   padding: var(--padding);
   width: 100%;
-  background-color: var(--main-bg-color);
+  background-color: var(--color-peach2);
+}
+
+footer.flex-start {
+  justify-content: flex-start;
 }
 .footer-outer {
   display: flex;
@@ -302,6 +343,53 @@ footer {
 }
 
 /* HAMBURGER MENU */
+/* MENU */
+.dropdown-menu,
+.dropdown-menu.show,
+#menu {
+  position: fixed;
+  top: 0;
+  right: 0;
+  background: var(--color-offwhite);
+  height: 100vh;
+  margin: -2rem;
+
+  padding: 3rem;
+  color: black;
+}
+
+.nav-wrapper.menu-header {
+  width: 100%;
+  display: flex;
+  justify-content: end;
+  align-items: end;
+}
+
+h2.menu-title {
+  color: var(--color-brown);
+  font-weight: 900;
+}
+
+h3.menu-item {
+  font-size: 3rem;
+  text-transform: uppercase;
+}
+
+h3.menu-item > a {
+  color: var(--accent-color-shadow);
+  font-weight: 900;
+}
+
+.dropdown > .dropdown-menu > h2,
+.dropdown > .dropdown-menu > h3 {
+  margin-block-end: 1.5rem;
+}
+
+#menu > ul > li > a {
+  color: var(--color-brown);
+  font-weight: 900;
+}
+
 .dropdown {
   display: contents;
   cursor: pointer;
@@ -321,6 +409,7 @@ footer {
 
 .dropdown-toggle > img {
   margin-block-end: 5px;
+  max-width: 25px;
 }
 .dropdown-toggle > span {
   font-family: var(--font-headings);
@@ -337,19 +426,12 @@ footer {
 
 .dropdown-menu,
 .dropdown-menu.show {
-  transform: translate3d(70.5px, 15px, 0px);
-  font-size: 1.8rem;
-  font-family: var(--font-headings);
-  border: 2px solid rgb(255, 255, 255);
-  background-color: var(--accent-color-secondary);
-  padding: 1rem;
-  width: fit-content;
   position: absolute;
-  inset: 0px auto auto 0px;
+  inset: inherit;
   margin: 0px;
-  transform: translate3d(0px, 55.5px, 0px);
-  /* background-image: url("./../assets/img/illustrations/londonwallfairtower.png");
-  background-size: cover; */
+  transform: inherit;
+  right: 0;
+  width: fit-content;
 }
 
 .dropdown-item:focus,
@@ -363,6 +445,10 @@ footer {
 .btn:hover {
   background-color: inherit;
   border: inherit;
+}
+
+button#dropdownMenu2:hover {
+  background-color: transparent;
 }
 
 .btn.show:focus,
@@ -379,10 +465,11 @@ footer {
   color: #fff;
 }
 
-@media screen and (min-width: 450px) {
+@media screen and (max-width: 450px) {
+  #menu,
   .dropdown-menu,
   .dropdown-menu.show {
-    width: fit-content;
+    width: calc(100% - var(--padding));
   }
 
   .dropdown-toggle {
@@ -405,8 +492,8 @@ button,
   border: 2px solid white;
   border-radius: 10px;
   border: none;
-  color: #fff;
-  font-size: 1.6rem;
+  color: black;
+  font-size: 1.8rem;
   /* color: #000; */
   /* border-radius: 4px; */
 }
@@ -426,21 +513,6 @@ button > a > p:hover {
 
 button > a > p {
   margin-bottom: 0;
-}
-
-@media screen and (min-width: 450px) {
-  main {
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-  }
-
-  img.hero {
-    width: 200px;
-  }
 }
 
 /* GENERAL LIST */
