--- a/styles/main.css
+++ b/styles/main.css
@@ -485,7 +485,8 @@ button#dropdownMenu2:hover {
 
 /* BUTTONS */
 button,
-.inline-btn-wrapper > a {
+.inline-btn-wrapper > a,
+input[type="submit"] {
   font-weight: 600;
   padding: 10px;
   background-color: var(--accent-color-secondary);
@@ -570,4 +571,68 @@ h3.subtitle.category {
 
 main.record {
   padding: var(--padding);
+}
+
+/* FORM  */
+#memoryForm {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+#memoryForm > label {
+  display: flex;
+  flex-direction: column;
+  margin-block-end: 2rem;
+  width: 100%;
+}
+
+#memoryForm > label > input,
+#memoryForm > label > textarea {
+  padding: 1rem;
+  font-size: 1.8rem;
+  border-radius: 1rem;
+  background-color: var(--color-offwhite);
+  border: none;
+  font-weight: 900;
+}
+
+#memoryForm > label > input[type="checkbox"] {
+  margin-inline-end: 2rem;
+}
+
+#memoryForm > label > textarea {
+  padding: 1rem;
+  font-size: 1.8rem;
+  border-radius: 1rem;
+  background-color: var(--color-offwhite);
+  border: none;
+  font-weight: 900;
+}
+
+#memoryForm > label > input:focus,
+#memoryForm > label > input:focus-visible,
+#memoryForm > label > textarea:focus,
+#memoryForm > label > textarea:focus-visible {
+  outline: 4px solid var(--color-pink);
+}
+
+#memoryForm > label > input[type="checkbox"]:focus {
+  outline: inherit;
+}
+
+#memoryForm > label > span {
+  margin-block-end: 1rem;
+  font-weight: 900;
+  font-size: 1.8rem;
+}
+
+#memoryForm > label.checkbox-label {
+  flex-direction: row;
+}
+
+input#subBtn.disabledBtn {
+  background-color: grey;
+  color: darkgray;
 }
