--- a/styles/main.css
+++ b/styles/main.css
@@ -69,7 +69,7 @@ main.landing {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-image: url("/assets/img/1884components-24.png");
+  background-image: url("../assets/img/1884components-24.png");
   background-position: 0% 22%;
   background-size: contain;
   background-repeat: no-repeat;
@@ -198,7 +198,7 @@ a:hover {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-image: url("/assets/img/1884components-24.png");
+    background-image: url("../assets/img/1884components-24.png");
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
