--- a/styles/main.css
+++ b/styles/main.css
@@ -2,11 +2,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap");
 
 :root {
-  --main-bg-color: var(--color-brown);
-  --twine-bg-color: var(--color-brown);
-  --accent-color-primary: var(--color-peach);
+  --main-bg-color: var(--color-peach2);
+  --twine-bg-color: var(--color-peach2);
+  --accent-color-primary: var(--color-brown);
   --accent-color-secondary: var(--color-pink);
-  --accent-color-shadow: var(--color-peach2);
+  --accent-color-shadow: var(--color-peach1);
   --font-headings: "Hammersmith One", sans-serif;
   --font-body: "Space Grotesk", sans-serif;
   --font-placard: "Hammersmith One", sans-serif;
@@ -40,7 +40,7 @@ body {
   /* font-family: "IBM Plex Mono", monospace; */
   font-family: var(--font-body);
   color: var(--color-offwhite);
-
+  /* color: white; */
   text-align: left;
 }
 
@@ -105,7 +105,7 @@ main.landing > .landing-btn {
 }
 
 main.landing > .landing-btn > button {
-  font-size: 4rem;
+  font-size: 3rem;
 }
 
 section {
@@ -123,6 +123,7 @@ h6 {
   text-align: left;
   /* text-transform: uppercase; */
   margin-block-end: 0;
+  font-weight: 600;
 }
 
 h1 {
@@ -136,12 +137,12 @@ h2 {
 
 h3 {
   font-size: 3.5rem;
-  color: var(--color-pink);
+  /* color: var(--color-pink); */
 }
 
 h4 {
   font-size: 3rem;
-  color: var(--color-pink);
+  /* color: var(--color-pink); */
 }
 
 p {
@@ -154,7 +155,7 @@ section.webtext > p {
 }
 
 p.provocation {
-  color: var(--color-pink);
+  color: var(--color-brown);
   font-weight: 900;
 }
 
@@ -267,9 +268,9 @@ footer {
   align-items: flex-end;
   position: fixed;
   bottom: 0;
-  padding: var(--padding);
+  padding: 1rem var(--padding);
   width: 100%;
-  background-color: var(--color-peach2);
+  background-color: var(--main-bg-color);
 }
 
 footer.flex-start {
@@ -385,9 +386,23 @@ h3.menu-item > a {
   margin-block-end: 1.5rem;
 }
 
-#menu > ul > li > a {
+.dropdown > .dropdown-menu > ul {
+  margin-block-end: 2rem;
+}
+
+#menu > ul > li > a,
+.dropdown > .dropdown-menu > ul > li > a {
   color: var(--color-brown);
   font-weight: 900;
+}
+
+.dropdown > .dropdown-menu > ul > li {
+  margin-left: 0.5em;
+  padding-left: 1.5em;
+}
+
+.dropdown > .dropdown-menu > ul > li > a {
+  font-size: 1.6rem;
 }
 
 .dropdown {
@@ -488,13 +503,13 @@ button,
 .inline-btn-wrapper > a,
 input[type="submit"] {
   font-weight: 600;
-  padding: 10px;
+  padding: 8px;
   background-color: var(--accent-color-secondary);
   border: 2px solid white;
   border-radius: 10px;
   border: none;
   color: black;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   /* color: #000; */
   /* border-radius: 4px; */
 }
@@ -504,8 +519,8 @@ button > a > h2 {
 }
 
 button:hover {
-  background-color: var(--accent-color-primary);
-  border: solid white 1px;
+  background-color: var(--color-brown2);
+  color: white;
 }
 
 button > a > p:hover {
@@ -584,7 +599,7 @@ main.record {
 #memoryForm > label {
   display: flex;
   flex-direction: column;
-  margin-block-end: 2rem;
+  margin-block-end: 4rem;
   width: 100%;
 }
 
@@ -635,4 +650,21 @@ main.record {
 input#subBtn.disabledBtn {
   background-color: grey;
   color: darkgray;
+}
+
+/* MAKING  */
+.video-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; /* 16:9 aspect ratio */
+  overflow: hidden;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
